@@ -2,8 +2,8 @@
 // System.Drawing.Design.IconEditor.cs
 // 
 // Authors:
-//  Martin Willemoes Hansen (mwh@sysrq.dk)
-//  Andreas Nahr (ClassDevelopment@A-SoftTech.com)
+//   Martin Willemoes Hansen (mwh@sysrq.dk)
+//   Andreas Nahr (ClassDevelopment@A-SoftTech.com)
 // 
 // (C) 2003 Martin Willemoes Hansen
 // (C) 2003 Andreas Nahr
@@ -52,8 +52,7 @@ namespace System.Drawing.Design
 			IServiceProvider provider, object value)
 		{
 			openDialog = new OpenFileDialog();
-			// FIXME: Add multilanguage support
-			openDialog.Title = "Open image file";
+			openDialog.Title = Locale.GetText("Open image file");
 			openDialog.CheckFileExists = true;
 			openDialog.CheckPathExists = true;
 			openDialog.Filter = CreateFilterEntry (this);
@@ -84,8 +83,7 @@ namespace System.Drawing.Design
 
 		protected virtual string GetFileDialogDescription()
 		{
-			// FIXME: Add multilanguage support
-			return "Icon files";
+			return Locale.GetText("Icon files");
 		}
 
 		public override bool GetPaintValueSupported (
